--- a/src/page/order-confirm/index.css
+++ b/src/page/order-confirm/index.css
@@ -1,9 +1,9 @@
 /*
 * @Author: Lizh
 * @Date:   2018-05-11 14:15:13
-* @Last Modified by:   Lizh
-* @Last Modified time: 2018-05-16 21:33:31
-*/
+* @Last Modified by:   15156
+* @Last Modified time: 2018-06-03 12:36:08
+*/ 
 /* 地址模块 */
 .address-list{
     overflow: hidden;
