--- a/src/view/layout/html-common.html
+++ b/src/view/layout/html-common.html
@@ -15,4 +15,13 @@
 		  s.parentNode.insertBefore(hm, s);
 		})();
 	</script>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?058d89661ae2cdd0bab2e81aaba6fcb1";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 
