--- a/src/page/common/nav/index.css
+++ b/src/page/common/nav/index.css
@@ -2,7 +2,7 @@
 * @Author: Lizh
 * @Date:   2018-04-17 11:58:11
 * @Last Modified by:   15156
-* @Last Modified time: 2018-05-31 09:54:45
+* @Last Modified time: 2018-06-05 00:40:27
 */
 
 .notice-con {
@@ -10,28 +10,35 @@
     padding: 5px 0;
     line-height: 30px
 }
-
 .notice-con .notice {
     font-size: 14px;
     color: #fff;
     font-weight: 700;
     text-align: center
 }
-
 .notice-con .notice.add{
     color: #b5ff04;
 }
-
-.notice-con .notice .notice-link {
+.notice-con .notice .notice-link{
+    display: inline-block;
+    height: 25px;
+    line-height: 25px;
     color: #fff;
-    padding: 5px 5px 5px 10px;
-    text-decoration: none;
-    background: #2705fb96;
+    background: #9103a2;
     margin-right: 10px;
+    width: 130px;
 }
-
+.star{
+    font-size: 20px;
+    color: #9103a2;
+    margin-left: 20px;
+    text-decoration: underline;
+}
+.star:hover{
+    color: #2303a2;
+}
 .notice-con .notice .notice-link:hover {
-    background: #2705fbf5
+    background: #2303a2;
 }
 .nav{
 	height: 30px;
