--- a/src/view/layout/html-common.html
+++ b/src/view/layout/html-common.html
@@ -4,3 +4,13 @@
 	<mata name="description" content="一个提供数码通讯、手机、电脑、家居百货、服装服饰、母婴、图书、食品等数万种优质产品，最优质、最便捷、最牛逼的网上购物平台">
 	<link rel="dns-prefecth" href="//cdn.bootcss.com">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?a3a8adf767ec812653bc1c5179410a4e";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
+
